force-app/main/default/objects/lwrp__Scheduled_Report__c/lwrp__Scheduled_Report__c.object-meta.xml
<CustomObject>
    <description>Defines a scheduled execution of a report configuration with email delivery settings.</description>
    <label>Scheduled Report</label>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>