force-app/main/default/objects/lwrp__Scheduled_Report__c/fields/lwrp__Email_CC__c.field-meta.xml
<CustomField>
    <fullName>lwrp__Email_CC__c</fullName>
    <description>Comma-separated list of CC email addresses.</description>
    <label>Email CC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>