force-app/main/default/objects/lwrp__Scheduled_Report__c/fields/lwrp__Schedule_Days_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>lwrp__Schedule_Days_Of_Week__c</fullName>
    <description>Days of the week when the report should run. Only applicable for Weekly frequency.</description>
    <label>Schedule Days of Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MON</fullName>
                <label>Monday</label>
            </value>
            <value>
                <fullName>TUE</fullName>
                <label>Tuesday</label>
            </value>
            <value>
                <fullName>WED</fullName>
                <label>Wednesday</label>
            </value>
            <value>
                <fullName>THU</fullName>
                <label>Thursday</label>
            </value>
            <value>
                <fullName>FRI</fullName>
                <label>Friday</label>
            </value>
            <value>
                <fullName>SAT</fullName>
                <label>Saturday</label>
            </value>
            <value>
                <fullName>SUN</fullName>
                <label>Sunday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>