force-app/main/default/objects/lwrp__Scheduled_Report__c/fields/lwrp__Schedule_Hour__c.field-meta.xml
<CustomField>
    <fullName>lwrp__Schedule_Hour__c</fullName>
    <defaultValue>9</defaultValue>
    <description>The hour of day (0-23) when the report should run. Not applicable for Hourly frequency.</description>
    <label>Schedule Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>