force-app/main/default/objects/lwrp__Scheduled_Report__c/listViews/lwrp__All.listView-meta.xml
<ListView>
    <fullName>lwrp__All</fullName>
    <columns>NAME</columns>
    <columns>lwrp__Report_Configuration__c</columns>
    <columns>lwrp__Is_Active__c</columns>
    <columns>lwrp__Schedule_Frequency__c</columns>
    <columns>lwrp__Next_Run_Time__c</columns>
    <columns>lwrp__Last_Run_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>